# x11-sim

./: CMakeLists.txt  README.md  build.sh
include/: sphere.h  window.hpp
src/: main.cpp  sphere.cpp  window.cpp
